Bug 330537 - Crash/Assert when ALT key pressed and a floating Advanced Color Selector docker has focus
Summary: Crash/Assert when ALT key pressed and a floating Advanced Color Selector dock...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 2.8 Beta
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2014-01-29 12:33 UTC by Stuart Dickson
Modified: 2014-02-04 08:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stuart Dickson 2014-01-29 12:33:15 UTC
If the user gives focus to the Advanced Color Selector whilst it is floating, then presses the ALT key, this will cause a crash with the error:

ASSERT(krita): "m_isPopup" in file calligra/plugins/extensions/dockers/advancedcolorselector/kis_color_selector_base.cpp, line 415

Reproducible: Sometimes

Steps to Reproduce:
1. Open Krita and create a blank image
2. Undock the Advanced Color Selector docker and move it over the canvas.
3. Depress the ALT key (maybe more than once? Seems to happen after a very brief delay)
Actual Results:  
Error message displayed

Expected Results:  
No error message (although maybe the ALT key has some special purpose and it should do something else?)
Comment 1 Dmitry Kazakov 2014-01-29 12:34:47 UTC
regression, release blocker
Comment 2 Dmitry Kazakov 2014-02-02 16:38:25 UTC
Git commit e30d262ca042d2e3246dd45547a69ea5f33c8dfb by Dmitry Kazakov.
Committed on 02/02/2014 at 16:38.
Pushed by dkazakov into branch 'master'.

Don't try to hide a popup if we are not a popup

M  +3    -1    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector_base.cpp

http://commits.kde.org/calligra/e30d262ca042d2e3246dd45547a69ea5f33c8dfb
Comment 3 Dmitry Kazakov 2014-02-04 08:27:12 UTC
Git commit d25e21c7055a69b559a13c07453f3cfbeb80922d by Dmitry Kazakov.
Committed on 02/02/2014 at 16:38.
Pushed by dkazakov into branch 'calligra/2.8'.

Don't try to hide a popup if we are not a popup

M  +3    -1    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector_base.cpp

http://commits.kde.org/calligra/d25e21c7055a69b559a13c07453f3cfbeb80922d