Don't try to hide a popup if we are not a popup

BUG:330537